hw10/firstapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: firstapp
  template:
    metadata:
      labels:
        app: firstapp
    spec:
      containers:
      - name: firstapp-container
        image: nginx
        ports:
        - containerPort: 80
