hw10/secondapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secondapp
  template:
    metadata:
      labels:
        app: secondapp
    spec:
      containers:
      - name: secondapp-container
        image: nginx
        ports:
        - containerPort: 80
