hw10/firstapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: firstapp-service
spec:
  selector:
    app: firstapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
