hw10/secondapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: secondapp-service
spec:
  selector:
    app: secondapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
